# seacommons

./: .dockerignore  .env.example  .gitignore  DEMO_DEPLOY.md  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.pilot.yml  docker-compose.ship.yml  docker-compose.yml  index.html  metadata.json  package.json  render.yaml  run_dev.sh  start-pilot.ps1  start.ps1  vite.config.ts
apps/api/: Dockerfile.api  pyproject.toml  requirements-api.txt
apps/api/connect/: docker-compose.connect.yml
apps/api/core/: config.py
apps/api/core/anomaly/: ionosphere.py  traffic.py
apps/api/core/api/: main.py
apps/api/core/api/routes/: alerts.py  drift.py  ingest.py  integrations.py  vessels.py
apps/api/core/db/migrations/: env.py
apps/api/core/db/migrations/versions/: 001_initial.py
apps/api/core/domain/: events.py
apps/api/core/drift/: engine.py  models.py  opendrift_runner.py
apps/api/core/forensic/: logger.py  miniseed.py
apps/api/core/ingestion/: signal.py
apps/api/core/ingestion/channels/: telegram_bot.py
apps/api/core/ingestion/parsers/: base.py  sms.py  twitter.py  whatsapp.py
apps/api/core/integrations/: state.py
apps/api/core/integrations/ais/: adapter.py
apps/api/core/integrations/aisstream/: client.py
apps/api/core/ocean/: cmems.py
apps/api/core/probability/: engine.py  updater.py
apps/api/core/sensors/: nmea.py  seismic.py
apps/api/core/sensors/nmea0183/: parser.py
apps/api/edge/firmware/: flash.sh
connect/: install.sh  nmea_bridge.py
core/: config.py
deploy/: Dockerfile.frontend  docker-compose.pilot.yml  render-demo.yaml  (+3 more)
(+63 files in other folders)
